# csv-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html  styles.css
examples/: contacts.csv
src/csv_cleaner/: __init__.py  cli.py  core.py
tests/: test_core.py
